# sim_harness

./: .gitignore  CMakeLists.txt  PROPOSAL_FP_TESTING.md  REMOVED_FEATURES.md  REVIEW.md  mkdocs.yml  package.xml  run_tests.sh  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  contributing.md  contributing.rst  index.md  index.rst
docs/api/: core.md  core.rst  primitives.md  primitives.rst  simulation.md  simulation.rst  validation.md  validation.rst
docs/examples/: custom-robot.md  custom_robot.rst  turtlebot3.md  turtlebot3.rst
docs/getting-started/: first-test.md  installation.md  quickstart.md
docs/getting_started/: first_test.rst  installation.rst  quickstart.rst
docs/guide/: assertions.md  assertions.rst  cli.rst  fixtures.md  fixtures.rst  message-collection.md  message_collection.rst  readiness_check.rst  requirements.md  requirements.rst  simulation-control.md  simulation_control.rst  writing-tests.md  writing_tests.rst
examples/: conftest.py  test_property_based.py  test_turtlebot3_integration.py  test_turtlebot3_with_sim_control.py  turtlebot3_integration_test.cpp
include/sim_harness/: sim_harness.hpp
include/sim_harness/core/: message_collector.hpp  spin_helpers.hpp  test_fixture_base.hpp  test_isolation.hpp
include/sim_harness/primitives/: lifecycle_assertions.hpp  navigation_assertions.hpp  perception_assertions.hpp  sensor_assertions.hpp  service_assertions.hpp  timing_assertions.hpp  vehicle_assertions.hpp
include/sim_harness/simulator/: gazebo_backend.hpp  simulator_interface.hpp
include/sim_harness/validation/: requirement_validator.hpp  validation_result.hpp
launch/: gazebo_test.launch.py  gtest_runner.launch.py  master_test.launch.py  test_runner.launch.py  turtlebot3_test.launch.py
scripts/: format_test_results.py  run_tests
sim_harness/: __init__.py  assertions.py  checks.py  collector.py  fixture.py  launch_utils.py  nav2.py  perception.py  spin.py
sim_harness/checks/: __init__.py  motion.py  navigation.py  perception.py  readiness.py  sensors.py
sim_harness/core/: __init__.py  hypothesis.py  message_collector.py  predicates.py  readiness_check.py  sim_property.py  simulation_fixture.py  spin_helpers.py  strategies.py  stream_properties.py  test_fixture.py  test_isolation.py  topic_observer.py
sim_harness/primitives/: __init__.py  lifecycle_assertions.py  navigation_assertions.py  perception_assertions.py  sensor_assertions.py  service_assertions.py  timing_assertions.py  vehicle_assertions.py
sim_harness/ros2test/: __init__.py
sim_harness/ros2test/command/: __init__.py  test.py
sim_harness/ros2test/output/: __init__.py  console.py
sim_harness/ros2test/verb/: __init__.py  failed.py  list.py  run.py
sim_harness/simulator/: __init__.py  gazebo_backend.py  gazebo_ground_truth.py  simulation_launcher.py  simulation_manager.py  simulator_interface.py
sim_harness/test_runner/: __init__.py  cli.py  cpp_registry.py  executors.py  runner.py  test_registry.py
sim_harness/validation/: __init__.py  requirement_validator.py  validation_result.py
src/core/: test_fixture_base.cpp  test_isolation.cpp
src/primitives/: lifecycle_assertions.cpp  navigation_assertions.cpp  perception_assertions.cpp  sensor_assertions.cpp  service_assertions.cpp  timing_assertions.cpp  vehicle_assertions.cpp
src/simulator/: gazebo_backend.cpp
src/validation/: validation_result.cpp
test/cpp/: test_message_collector.cpp  test_validation_result.cpp
test/integration/: test_turtlebot3_integration.launch.py
test/python/: __init__.py  test_message_collector.py  test_test_isolation.py  test_validation_result.py
