# Copyright 2026 The sim_harness Authors
# SPDX-License-Identifier: Apache-2.0

# Setuptools configuration for sim_harness Python package.
#
# This file registers the ros2 test command and its verbs
# with the ros2cli plugin system.
#
# After building and sourcing the workspace, the following
# commands become available:
#
#   ros2 test list          - List all launch tests
#   ros2 test run           - Run tests
#   ros2 test failed        - Rerun failed tests

[metadata]
name = sim_harness
version = 1.0.0
description = Unified test harness for ROS 2 simulation testing
author = John
author_email = john@example.com
license = Apache-2.0

[options]
packages = find:
zip_safe = True
install_requires = setuptools

[options.packages.find]
exclude = test*

[options.entry_points]
# Register 'test' as a new ros2 command
ros2cli.command =
    test = sim_harness.ros2test.command.test:TestCommand

# Register the extension point for ros2 test verbs
ros2cli.extension_point =
    ros2test.verb = sim_harness.ros2test.verb:VerbExtension

# Register the verb implementations
ros2test.verb =
    list = sim_harness.ros2test.verb.list:ListVerb
    run = sim_harness.ros2test.verb.run:RunVerb
    failed = sim_harness.ros2test.verb.failed:FailedVerb
